main/static/styles/main.css
/* ... */
.generic-content {
    max-width: 700px;
    color: rgba(0, 0, 0, 0.84);
    font-weight: 400;
    font-style: normal;
    line-height: 1.58;
    font-size: 21px;
    letter-spacing: -.003em;
    font-family: Georgia, Cambria, "Times New Roman", Times, serif;
}
@media (max-width: 767px) {
    .generic-content {
        font-size: 18px;
        line-height: 1.58;
        letter-spacing: -.004em;
    }
}

.generic-content h2 {
    margin-bottom: 20px;
}

.generic-title {
    font-size: 29px;
    font-weight: 500;
    margin-top: 20px;
    margin-bottom: 10px;
    text-align: center;
}

.generic form {
    width: 500px;
    margin-left: auto;
    margin-right: auto;
    text-align: left;
}

.generic label {
    color: #4f4f4f;
}

.generic input[type="email"],
.generic input[type="text"] {
    width: 100%;
    margin-top: 3px;
    margin-bottom: 20px;
    border: 1px solid #ddd;
    padding-top: 6px;
    padding-bottom: 4px;
    padding-left: 8px;
    padding-right: 8px;
    -webkit-appearance: none;
}

.generic input[type="submit"] {
    cursor: pointer;
    display: flex;
    margin-top: 10px;
    margin-left: auto;
    margin-right: auto;
    padding: 10px 30px;
    border-radius: 3px;
    background: #ffa918;
    color: #fff;
    border: none;
}

.generic input[type="submit"]:hover {
    background: #fe9f00;
}

.questions {
    max-width: 1000px;
    margin: auto;
    padding-left: 10px;
    padding-right: 10px;
}

.questions header {
    display: flex;
    border-bottom: 1px solid #e4e6e8;
}

.questions h1 {
    margin-bottom: 16px;
}

.questions header a {
    cursor: pointer;
    margin-top: 16px;
    margin-bottom: 16px;
    margin-left: auto;
    padding: 10px 15px;
    border-radius: 3px;
    background: #ffa918;
    color: #fff;
    border: none;
    display: flex;
    align-self: center;
    transition: all 0.15s ease;
    box-shadow: 0 4px 6px rgba(50, 50, 93 , 0.1);
}

.questions header a:hover {
    background: #fe9f00;
    box-shadow: 0 4px 6px rgba(50, 50, 93 , 0.1), 0 0 0 1px rgba(43,45,80,.1);
}

.questions-create {
    margin-top: 16px;
}

.questions form {
    max-width: 700px;
}

.questions input[type="text"] {
    width: 100%;
    box-sizing: border-box;
    font-size: 24px;
    margin-top: 3px;
    margin-bottom: 20px;
    border: 1px solid #ddd;
    padding-top: 8px;
    padding-bottom: 7px;
    padding-left: 8px;
    padding-right: 8px;
    -webkit-appearance: none;
}

.questions input[type="text"]::placeholder {
    color: #bbb;
}

.questions input[type="submit"] {
    cursor: pointer;
    display: flex;
    margin-left: auto;
    margin-top: 10px;
    padding: 10px 30px;
    border-radius: 3px;
    background: #ffa918;
    color: #fff;
    border: none;
    transition: all 0.15s ease;
    box-shadow: 0 4px 6px rgba(50, 50, 93 , 0.1);
}

.questions input[type="submit"]:hover {
    background: #fe9f00;
    box-shadow: 0 4px 6px rgba(50, 50, 93 , 0.1), 0 0 0 1px rgba(43,45,80,.1);
}

.questions-list {
    margin-top: 16px;
}

.questions-list-item {
    margin-bottom: 30px;
}

.questions-list-item-title {
    margin-top: 0;
    margin-bottom: 8px;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', sans-serif;
    font-size: 32px;
}
@media (max-width: 480px) {
    .questions-list-item-title {
        font-size: 28px;
    }
}

.questions-list-item-meta {
    font-size: 14px;
    color: #9199a1;
}

.questions-list-item-meta a {
    color: inherit;
}

.questions-list-item-meta a:hover {
    text-decoration: underline;
    color: #fe9f00;
}

.questions-view header {
    border-bottom: 1px solid #e4e6e8;
}

.questions-view h1 {
    font-size: 32px;
    margin-bottom: 16px;
}

.questions-view-content {
    max-width: 700px;
    padding-left: 16px;
    padding-right: 16px;
    padding-bottom: 16px;
    margin-top: 16px;
    box-sizing: border-box;
    border: 1px solid #ffa918;
}

.questions-view-content-body {
    display: flex;
}

.questions-view-content-body-author {
    margin-top: 16px;
}

.questions-view-content-body-author > img {
    border-radius: 50%;
}

.questions-view-content-body-text {
    margin-left: 16px;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', sans-serif;
    line-height: 1.3;
}

.questions-view-content-meta {
    text-align: right;
    color: #9199a1;
    font-size: 14px;
    margin-top: 32px;
}

.questions-view-post {
    margin-top: 40px;
    margin-bottom: 128px;
}

.questions-view-post-title {
    font-size: 18px;
    margin-bottom: 8px;
}

.questions-view-answers {
    margin-top: 32px;
    margin-bottom: 32px;
}

.questions-view-answers-title {
    font-size: 22px;
    margin-top: 64px;
    margin-bottom: 8px;
}

.questions-view-answers-item:nth-child(2) {
    margin-top: 32px;
}

.questions-view-answers-item {
    display: flex;
    margin-top: 64px;
    max-width: 700px;
    padding-left: 16px;
    padding-right: 16px;
    padding-bottom: 16px;
    box-sizing: border-box;
    border: 1px solid #ffa918;
}

.questions-view-answers-item-author {
    margin-top: 16px;
}

.questions-view-answers-item-author > img {
    border-radius: 50%;
}

.questions-view-answers-item-body {
    width: 668px;
}

.questions-view-answers-item-body-text {
    margin-left: 16px;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', sans-serif;
    line-height: 1.3;
}

.questions-view-answers-item-body-meta {
    text-align: right;
    color: #9199a1;
    font-size: 14px;
    margin-top: 16px;
}

